# limit-order-book

./: README.md  pyproject.toml
limit_order_book/: __init__.py  array_deque.py  balanced_tree.py  hash_deque.py  limit_order_book.py  order.py
limit_order_book/array_deque/: __init__.py  array_deque.py
limit_order_book/base/: __init__.py  limit_order_book.py  price_deque.py  rich.py
limit_order_book/datasets/: __init__.py  base.py
limit_order_book/datasets/data/: MSFT_2012-06-21_34200000_37800000_message_50.csv.pq
limit_order_book/deque_lob/: __init__.py  array_deque.py  balanced_tree.py  base_deque_limit_order_book.py  hash_deque.py
notebooks/: 01 - Latency.ipynb  02 - Simulation.ipynb
